Change defaults structure